[package]
name = "vqr"
version = "0.0.0"
authors = ["zohnannor <zohnannor@gmail.com>"]
edition = "2018"
license = "MIT AND Apache-2.0"
description = "Async VK API library"
repository = "https://github.com/zohnannor/vqr/"
readme = "README.md"
exclude = [
  "codegen/*",
  "src/main.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.3.0", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
async-trait = "0.1.50"
